Update `gallery-text` to fix alignment.
On smaller screen sizes the text gets formatted jankily below images. Removing the ```css
width: 70%;
```
from images fixes this

--- a/style.css
+++ b/style.css
@@ -79,7 +79,6 @@ body {
 
 .gallery-text {
   margin: auto; /* required to make sure that the caption aligns with the image*/
-  width: 70%;
   color: #bfbfbf;
   font-size: 30px;
   /*background-color: #ffffff;*/
